// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NukaCarousel /> renders properly 1`] = `
<div>
  <div
    class="jsx-3311130813 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 1 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-3311130813 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-3311130813 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 500%; text-align: left; user-select: auto; transform: translateX(calc(-26.666666666666668% - 0px)); display: flex;"
        >
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NukaCarousel /> renders properly when cellAlign prop is not provided 1`] = `
<div>
  <div
    class="jsx-3311130813 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 1 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-3311130813 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-3311130813 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 500%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
        >
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NukaCarousel /> renders properly when slidesToShow prop is not provided 1`] = `
<div>
  <div
    class="jsx-3311130813 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 1 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-3311130813 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-3311130813 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 1500%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
        >
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NukaCarousel /> renders properly when width prop is not provided 1`] = `
<div>
  <div
    class="jsx-443661925 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 1 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-443661925 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-443661925 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 500%; text-align: left; user-select: auto; transform: translateX(calc(-26.666666666666668% - 0px)); display: flex;"
        >
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NukaCarousel /> switches to the next slide when clicking the next arrow button 1`] = `
<div>
  <div
    class="jsx-3311130813 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 2 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-3311130813 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-3311130813 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 500%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
        >
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NukaCarousel /> switches to the previous slide when clicking the previous arrow button 1`] = `
<div>
  <div
    class="jsx-3311130813 nukaCarouselContainer"
  >
    <div
      class="slider-container"
      style="position: relative;"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
        tabindex="-1"
      >
        Slide 5 of 5
      </div>
      <div
        style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerleft"
          style="pointer-events: auto;"
        >
          <button
            aria-label="previous slide"
            class="jsx-3311130813 previousButton"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
      >
        <div
          class="slider-control-centerright"
          style="pointer-events: auto;"
        >
          <button
            aria-label="next slide"
            class="jsx-3311130813 nextButton"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label="carousel-slider"
        class="slider-frame"
        role="region"
        style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
        tabindex="0"
      >
        <div
          class="slider-list"
          style="width: 500%; text-align: left; user-select: auto; transform: translateX(calc(-53.333333333333336% - 0px)); display: flex;"
        >
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-current prev-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-current slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              1
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              2
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              3
            </div>
          </div>
          <div
            class="slide next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              4
            </div>
          </div>
          <div
            class="slide slide-current next-cloned slide-visible"
            style="width: 6.666666666666667%; height: auto; padding: 0px 0px; opacity: 1;"
          >
            <div>
              Slide 
              5
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
